1. 跟随jediterm基本结束